--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>The Unawakened Human Condition | Eckhart Tolle on Everyday Presence (Part 2)</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">31 minutes ago</div>
+                        <div class="date">48 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -321,7 +321,7 @@
                     <div class="video-info">
                         <h3>What taxes will they increase at the Budget next month?</h3>
                         <div class="channel">Garys Economics</div>
-                        <div class="date">Yesterday</div>
+                        <div class="date">2 days ago</div>
                     </div>
                 </a>
             </div>
@@ -702,9 +702,9 @@
         
             <div class="video">
                 <a href="https://www.youtube.com/watch?v=Z7ulJrZa8n4" target="_blank">
-                    <img src="https://i.ytimg.com/vi/Z7ulJrZa8n4/mqdefault.jpg" alt="Is the Labour government over?">
+                    <img src="https://i.ytimg.com/vi/Z7ulJrZa8n4/mqdefault.jpg" alt="Can Labour be Saved?">
                     <div class="video-info">
-                        <h3>Is the Labour government over?</h3>
+                        <h3>Can Labour be Saved?</h3>
                         <div class="channel">Garys Economics</div>
                         <div class="date">5 days ago</div>
                     </div>
@@ -860,7 +860,7 @@
                     <div class="video-info">
                         <h3>Why Labour are so unpopular</h3>
                         <div class="channel">Garys Economics</div>
-                        <div class="date">6 days ago</div>
+                        <div class="date">1 week ago</div>
                     </div>
                 </a>
             </div>
@@ -5149,7 +5149,7 @@
                         <div class="video-info">
                             <h3>What taxes will they increase at the Budget next month?</h3>
                             <div class="channel">Garys Economics</div>
-                            <div class="date">Yesterday</div>
+                            <div class="date">2 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -5332,9 +5332,9 @@
             
                 <div class="video">
                     <a href="https://www.youtube.com/watch?v=Z7ulJrZa8n4" target="_blank">
-                        <img src="https://i.ytimg.com/vi/Z7ulJrZa8n4/mqdefault.jpg" alt="Is the Labour government over?">
+                        <img src="https://i.ytimg.com/vi/Z7ulJrZa8n4/mqdefault.jpg" alt="Can Labour be Saved?">
                         <div class="video-info">
-                            <h3>Is the Labour government over?</h3>
+                            <h3>Can Labour be Saved?</h3>
                             <div class="channel">Garys Economics</div>
                             <div class="date">5 days ago</div>
                         </div>
@@ -5380,7 +5380,7 @@
                         <div class="video-info">
                             <h3>Why Labour are so unpopular</h3>
                             <div class="channel">Garys Economics</div>
-                            <div class="date">6 days ago</div>
+                            <div class="date">1 week ago</div>
                         </div>
                     </a>
                 </div>
@@ -7238,7 +7238,7 @@
                         <div class="video-info">
                             <h3>The Unawakened Human Condition | Eckhart Tolle on Everyday Presence (Part 2)</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">31 minutes ago</div>
+                            <div class="date">48 minutes ago</div>
                         </div>
                     </a>
                 </div>
